--- a/templates/training/index.html.twig
+++ b/templates/training/index.html.twig
@@ -1,20 +1,45 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello TrainingController!{% endblock %}
+{% block title %}Training index{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <h1>Training index</h1>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Title</th>
+                <th>Description</th>
+                <th>Location</th>
+                <th>Day</th>
+                <th>StartTime</th>
+                <th>EndTime</th>
+                <th>actions</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for training in trainings %}
+            <tr>
+                <td>{{ training.id }}</td>
+                <td>{{ training.title }}</td>
+                <td>{{ training.description }}</td>
+                <td>{{ training.location }}</td>
+                <td>{{ training.day }}</td>
+                <td>{{ training.startTime ? training.startTime|date('Y-m-d H:i:s') : '' }}</td>
+                <td>{{ training.endTime ? training.endTime|date('Y-m-d H:i:s') : '' }}</td>
+                <td>
+                    <a href="{{ path('training_show', {'id': training.id}) }}">show</a>
+                    <a href="{{ path('training_edit', {'id': training.id}) }}">edit</a>
+                </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="8">no records found</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'D:/laragon/www/FCRosheim/src/Controller/TrainingController.php'|file_link(0) }}">src/Controller/TrainingController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'D:/laragon/www/FCRosheim/templates/training/index.html.twig'|file_link(0) }}">templates/training/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <a href="{{ path('training_new') }}">Create new</a>
 {% endblock %}
