finished first draft of front, reorganized twig architecture

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -21,4 +21,5 @@ span.leftbar {
 /* More spacing for the login/user logo in relation to the rest of the nav */
 #log-logo {
     margin-left: 1rem;
+    padding-right: 0.7rem;
 }
