--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,10 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {# Run `composer require symfony/webpack-encore-bundle`
-           and uncomment the following Encore helpers to start using Symfony UX #}
         {% block stylesheets %}
-            <link rel="stylesheet" href="{{ asset('css/custom.css') }}"/>
             <link rel="shortcut icon" href="img/logo.ico" type="image">
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
@@ -16,27 +13,6 @@
         {% endblock %}
     </head>
     <body>
-        {% block header %}
-            <header class="d-flex flex-wrap justify-content-center py-3 mb-4">
-                <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-                    <svg class="bi me-2" width="40" height="32"><img src="img/logo.png" height="42px"/></svg>
-                </a>
-        
-                <ul class="nav nav-pills">
-                    <li class="nav-item"><a href="#" class="nav-link"><span class="leftbar"></span>Home</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link"><span class="leftbar"></span>News</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link"><span class="leftbar"></span>Résultats</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link"><span class="leftbar"></span>Prochainement</a></li>
-                    <li class="nav-item" id="log-logo"><a href="#" class="nav-link">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
-                        <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-                        <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-                    </svg>
-                    </a></li>
-                </ul>
-        </header>
-        {% endblock %}
-        {% block body %}
-        {% endblock %}
+        {{ include ("include/header.html.twig") }}
     </body>
 </html>
