--- a/templates/include/header.html.twig
+++ b/templates/include/header.html.twig
@@ -5,8 +5,8 @@
                 </a>
         
                 <ul class="nav nav-pills">
-                    <li class="nav-item"><a href="#" class="nav-link"><span class="leftbar">{# span border makes the cute little pipe to the left of the nav-items #}</span>Home</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link"><span class="leftbar"></span>News</a></li>
+                    <li class="nav-item"><a href="/" class="nav-link"><span class="leftbar">{# span border makes the cute little pipe to the left of the nav-items #}</span>Home</a></li>
+                    <li class="nav-item"><a href="/news" class="nav-link"><span class="leftbar"></span>News</a></li>
                     <li class="nav-item"><a href="#" class="nav-link"><span class="leftbar"></span>Résultats</a></li>
                     <li class="nav-item"><a href="#" class="nav-link"><span class="leftbar"></span>Prochainement</a></li>
                     <li class="nav-item" id="log-logo"><a href="#" class="nav-link">
