--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,1 +1,10 @@
-{% extends 'base.html.twig' %}
+{% include 'base.html.twig' %}
+{% block body %}
+<ul>
+    {% for new in news %}
+        <li>
+            {{ new.title }}
+        </li>
+    {% endfor %}
+</ul>
+{% endblock %}
