--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,5 +14,6 @@
     </head>
     <body>
         {{ include ("include/header.html.twig") }}
+        {% block content %}{% endblock %}
     </body>
 </html>
