--- a/templates/include/header.html.twig
+++ b/templates/include/header.html.twig
@@ -1,7 +1,7 @@
 {% block header %}
             <header class="d-flex flex-wrap justify-content-center py-3 mb-4">
                 <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-                    <svg class="bi me-2" width="40" height="32"><img src="../img/logo.png" height="42px"/></svg>
+                    <svg class="bi me-2" width="40" height="32"><img src="/img/logo.png" height="42px"/></svg>
                 </a>
         
                 <ul class="nav nav-pills">
