--- a/templates/news/edit.html.twig
+++ b/templates/news/edit.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Edit News{% endblock %}
 
-{% block body %}
+{% block content %}
     <h1>Edit News</h1>
 
     {{ include('news/_form.html.twig', {'button_label': 'Update'}) }}
