--- a/templates/news/index.html.twig
+++ b/templates/news/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}News index{% endblock %}
 
-{% block body %}
+{% block content %}
     <h1>News index</h1>
 
     <table class="table">
