--- a/templates/player/index.html.twig
+++ b/templates/player/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Player index{% endblock %}
 
-{% block body %}
+{% block content %}
     <h1>Player index</h1>
 
     <table class="table">
