--- a/templates/training/index.html.twig
+++ b/templates/training/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Training index{% endblock %}
 
-{% block body %}
+{% block content %}
     <h1>Training index</h1>
 
     <table class="table">
