fixed remaining block body to block content

--- a/templates/game/new.html.twig
+++ b/templates/game/new.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}New Game{% endblock %}
 
-{% block body %}
+{% block content %}
     <h1>Create new Game</h1>
 
     {{ include('game/_form.html.twig') }}
