--- a/templates/news/new.html.twig
+++ b/templates/news/new.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}New News{% endblock %}
 
-{% block body %}
+{% block content %}
     <h1>Create new News</h1>
 
     {{ include('news/_form.html.twig') }}
