--- a/templates/training/new.html.twig
+++ b/templates/training/new.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}New Training{% endblock %}
 
-{% block body %}
+{% block content %}
     <h1>Create new Training</h1>
 
     {{ include('training/_form.html.twig') }}
