--- a/templates/event/new.html.twig
+++ b/templates/event/new.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}New Event{% endblock %}
 
-{% block body %}
+{% block content %}
     <h1>Create new Event</h1>
 
     {{ include('event/_form.html.twig') }}
