--- a/templates/game/edit.html.twig
+++ b/templates/game/edit.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Edit Game{% endblock %}
 
-{% block body %}
+{% block content %}
     <h1>Edit Game</h1>
 
     {{ include('game/_form.html.twig', {'button_label': 'Update'}) }}
