--- a/templates/game/index.html.twig
+++ b/templates/game/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Game index{% endblock %}
 
-{% block body %}
+{% block content %}
     <h1>Game index</h1>
 
     <table class="table">
