--- a/templates/player/edit.html.twig
+++ b/templates/player/edit.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Edit Player{% endblock %}
 
-{% block body %}
+{% block content %}
     <h1>Edit Player</h1>
 
     {{ include('player/_form.html.twig', {'button_label': 'Update'}) }}
