--- a/templates/player/new.html.twig
+++ b/templates/player/new.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}New Player{% endblock %}
 
-{% block body %}
+{% block content %}
     <h1>Create new Player</h1>
 
     {{ include('player/_form.html.twig') }}
