--- a/templates/training/edit.html.twig
+++ b/templates/training/edit.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Edit Training{% endblock %}
 
-{% block body %}
+{% block content %}
     <h1>Edit Training</h1>
 
     {{ include('training/_form.html.twig', {'button_label': 'Update'}) }}
