--- a/templates/training/show.html.twig
+++ b/templates/training/show.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Training{% endblock %}
 
-{% block body %}
+{% block content %}
     <h1>Training</h1>
 
     <table class="table">
