--- a/templates/user/profile.html.twig
+++ b/templates/user/profile.html.twig
@@ -5,10 +5,16 @@
 {% block content %}
 <div class="container-fluid">
     <div class="full-height flex align-items-center">
-        <div class="col-md-3">
-            <div class="card"><p>test</p></div>
-        </div>
-        <div class="col-4 offset-md-1 d-flex justify-content-center">
+        <aside class="col-md-3">
+            <div class="sidebar">
+                <ul>
+                    <a href="#"><li>Mon équipe favorite</li></a>
+                    <a href="#"><li>Modifier mes informations</li></a>
+                    <a href="{{path('app_logout')}}"><li id="logout">Se déconnecter</li></a>
+                </ul>
+            </div>
+        </aside>
+        <main class="col-md-4 offset-md-1">
             <div class="card text-center">
                 {% if app.user %}
                     {% if app.user.lastname and app.user.firstname != null %}
@@ -23,7 +29,7 @@
                 {% endif %}
                 <span class="redline-center"></span>
             </div>
-        </div>
+        </main>
     </div>
 </div>
 {% endblock %}
