--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>{% block title %}FC Rosheim{% endblock %}</title>
         {% block stylesheets %}
-            <link rel="shortcut icon" href="img/logo.ico" type="image">
+            <link rel="shortcut icon" href="/img/logo.ico" type="image">
             {{ encore_entry_link_tags('app') }}
         {% endblock %}
 
