--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -2,7 +2,11 @@
 
 {% block title %}Register{% endblock %}
 
-{% block body %}
+{% block content %}
+<div class="container-fluid">
+    <div class="row justify-content-md-center full-height flex align-items-center">
+        <div class="col-md-4 justify-content-md-center card">
+
     {% for flashError in app.flashes('verify_email_error') %}
         <div class="alert alert-danger" role="alert">{{ flashError }}</div>
     {% endfor %}
@@ -16,6 +20,12 @@
         }) }}
         {{ form_row(registrationForm.agreeTerms) }}
 
-        <button type="submit" class="btn">Register</button>
+        <button type="submit" class="btn btn-primary">Register</button>
     {{ form_end(registrationForm) }}
+    </div>
+
+        </div>
+    </div>
 {% endblock %}
+
+
