--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,40 +5,39 @@
 {% block content %}
 <div class="container-fluid">
     <div class="row justify-content-md-center full-height flex align-items-center">
-        <div class="col-md-4 justify-content-md-center">
-            <div class="card">
-                <form method="post">
-                    {% if error %}
-                        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-                    {% endif %}
-                    {% if app.user %}
-                        <div class="mb-3">
-                            <p>Vous êtes connecté en tant que {{ app.user.username }}, </p><a href="{{ path('app_logout') }}">Se déconnecter</a>
-                        </div>
-                    {% endif %}
-                    <h1 class="h3 mb-3 font-weight-normal">Se connecter</h1>
-                    <span class="redline"></span>
-                    <label for="inputEmail">Email</label>
-                    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-                    <label for="inputPassword">Mot de passe</label>
-                    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-                    <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-                    {#
-                        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-                        See https://symfony.com/doc/current/security/remember_me.html
+        <div class="col-md-4 justify-content-md-center card">
+            <form method="post">
+                {% if error %}
+                    <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                {% endif %}
+                {% if app.user %}
+                    <div class="text-center">
+                        <p>Vous êtes connecté en tant que {{ app.user.username }}, </p><a href="{{ path('app_logout') }}">Se déconnecter</a>
+                    </div>
+                {% else %}
+                <h1 class="h3 mb-3 font-weight-normal">Se connecter</h1>
+                <span class="redline"></span>
+                <label for="inputEmail">Email</label>
+                <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+                <label for="inputPassword">Mot de passe</label>
+                <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+                <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+                {#
+                    Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
+                    See https://symfony.com/doc/current/security/remember_me.html
 
-                        <div class="checkbox mb-3">
-                            <label>
-                                <input type="checkbox" name="_remember_me"> Remember me
-                            </label>
-                        </div>
-                    #}
-                    <button class="btn btn-primary" type="submit">
-                        Se connecter
-                    </button>
-                    <p>Toujours pas inscrit ? <a href="{{ path('app_register') }}">S'inscrire</a> </p>
-                </form>
-            </div>
+                    <div class="checkbox mb-3">
+                        <label>
+                            <input type="checkbox" name="_remember_me"> Remember me
+                        </label>
+                    </div>
+                #}
+                <button class="btn btn-primary" type="submit">
+                    Se connecter
+                </button>
+                <p>Toujours pas inscrit ? <a href="{{ path('app_register') }}">S'inscrire</a> </p>
+                {% endif %}
+            </form>
         </div>
     </div>
 </div>
