--- a/templates/team/_delete_form.html.twig
+++ b/templates/team/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('team_delete', {'id': team.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('team_delete', {'id': team.id}) }}" onsubmit="return confirm('Êtes vous sûr de vouloir supprimer cette équipe?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ team.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-primary">Supprimer l'équipe</button>
 </form>
