--- a/templates/team/edit.html.twig
+++ b/templates/team/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Team{% endblock %}
+{% block title %}Edition {{team.teamName}}  - FC Rosheim{% endblock %}
 
 {% block content %}
     <div class="container-fluid">
