--- a/templates/team/new.html.twig
+++ b/templates/team/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Nouvelle équipe{% endblock %}
+{% block title %}Nouvelle équipe - FC Rosheim{% endblock %}
 
 {% block content %}
     <div class="container-fluid">
