--- a/templates/user/profile.html.twig
+++ b/templates/user/profile.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Mon profil{% endblock %}
+{% block title %}Mon profil - FC Rosheim{% endblock %}
 
 {% block content %}
 <div class="container-fluid">
