--- a/templates/user/profile.html.twig
+++ b/templates/user/profile.html.twig
@@ -8,6 +8,7 @@
         <aside class="col-md-3">
             <div class="sidebar">
                 <ul>
+                    <a href="{{ path('profile', {'id': app.user.id}) }}"><li>Mes Informations</li></a>
                     <a href="#"><li>Mon équipe favorite</li></a>
                     <a href="#"><li>Modifier mes informations</li></a>
                     <a href="{{path('app_logout')}}"><li id="logout">Se déconnecter</li></a>
