--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -7,6 +7,9 @@ body {
     background-position: 50% 0%;
     background-size: 742px;
 }
+h1, h2, h3, h4 {
+    color: whitesmoke;
+}
 /* Red pipe before header nav items */
 span.leftbar {
     color:whitesmoke;
@@ -92,10 +95,6 @@ span.leftbar {
     border: solid rgba(180, 0, 0, 0.8) 1px;
     border-radius: 0;
 }
-.card h1, .card h2, .card h3, .card h4 {
-    color: whitesmoke;
-    font-size: 1rem;
-}
 .card label {
     color: whitesmoke;
     margin-bottom: 0.2em;
@@ -125,6 +124,9 @@ span.leftbar {
     background-color: #101010cc;
     border: solid rgba(180, 0, 0, 0.8) 1px;
     border-radius: 0;
+}
+.card-team h4{
+    margin-bottom: 0;
 }
 .card-team  #teamName{
     color: whitesmoke;
