meta description + alt on images

--- a/templates/team/index.html.twig
+++ b/templates/team/index.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Liste des équipes - FC Rosheim{% endblock %}
+{% block meta_description %}Liste des équipes du FC Rosheim{% endblock %}
 
 {% block content %}
     <div class="container-fluid">
