--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="{% block meta_description %}Bienvenue sur l'application web du Football Club de Rosheim situé dans la commune du même nom dans le Bas-Rhin{% endblock %}">
         <title>{% block title %}FC Rosheim{% endblock %}</title>
         {% block stylesheets %}
             <link rel="shortcut icon" href="/img/logo.ico" type="image">
