--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}S'enregistrer - FC Rosheim{% endblock %}
+{% block meta_description %}Enregistrez vous sur l'application du FC Rosheim{% endblock %}
 
 {% block content %}
 <div class="container-fluid">
