--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Se connecter{% endblock %}
+{% block meta_description %}Se connecter à l'application web du FC Rosheim{% endblock %}
 
 {% block content %}
 <div class="container-fluid">
