--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -7,8 +7,13 @@ body {
     background-position: 50% 0%;
     background-size: 742px;
 }
-h1, h2, h3, h4 {
+/* Style des balises Hn */
+h1, h2, h3, h4, h5, h6 {
     color: whitesmoke;
+}
+/* style du bouton principal */
+.btn-primary{
+    border-radius: 0;
 }
 /* Red pipe before header nav items */
 span.leftbar {
@@ -36,7 +41,7 @@ span.leftbar {
 .flex {
     display: flex;
 }
-/* Taille de la hauteur de la page (pas 100vh car header) */
+/* Taille de la hauteur de la page (pas 100vh car header présent) */
 .full-height {
     height: 70vh;
 }
