--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,7 @@
         {% endblock %}
     </head>
     <body>
-        {{ include ("include/header.html.twig") }}
+        {{ include ("include/_header.html.twig") }}
         {% block content %}{% endblock %}
     </body>
 </html>
