started js on admin  panel

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -127,6 +127,10 @@ span.leftbar {
 .card button{
     border-radius: 0;
 }
+.card input {
+    margin-bottom: 0px;
+}
+
 /* Team */
 .card-team {
     height: 38px;
