--- a/templates/event/new.html.twig
+++ b/templates/event/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Event{% endblock %}
+{% block title %}Edit User{% endblock %}
 
 {% block content %}
     <h1>Create new Event</h1>
