--- a/templates/admin/users.html.twig
+++ b/templates/admin/users.html.twig
@@ -1,6 +1,5 @@
 {% extends 'base.html.twig' %}
 
-
 {% block title %}Mon profil - FC Rosheim{% endblock %}
 
 {% block content %}
@@ -22,7 +21,7 @@
             <h1 class='display-1 text-center'>PANNEAU D'ADMINISTRATION</h1>
                 <div class="card">
                 <h1 class="display-2">Gestion des Utilisateurs</h1>
-                <table class="table table-striped table-dark">
+                <table class="table table-striped table-dark table-hover">
                     <thead>
                         <tr>
                             <th scope=>Id</th>
@@ -34,7 +33,7 @@
                             <th>Equipe</th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody id="table_body">
                     {% for user in userRepository %}
                         <tr class='clickable' onclick="window.location='{{ path('admin_users_edit', {'id': user.id}) }}'">
                             <td>{{ user.id }}</td>
@@ -85,4 +84,8 @@
         </main>
     </div>
 </div>
+{% block javascripts %}
+    {{ parent() }}
+    {{ encore_entry_script_tags('adminUsers') }}
+{% endblock %}
 {% endblock content %}
