--- a/templates/admin/usersedit.html.twig
+++ b/templates/admin/usersedit.html.twig
@@ -22,7 +22,7 @@
             <h1 class='display-1 text-center'>PANNEAU D'ADMINISTRATION</h1>
                 <div class="card">
                 <h1 class="display-2">Gestion des Utilisateurs</h1>
-                    <table class="table table-striped table-dark">
+                    <table class="table table-striped table-dark table-hover">
                         <tbody>
                             <tr>
                                 <th>ID</th>
@@ -68,7 +68,14 @@
                     </table>
                 <button class='btn btn-primary' id='admin_save_button'>Save</button>
                 </div>
+                <div hidden>
+                    {{ include('admin/_form.html.twig') }}
+                </div>
         </main>
     </div>
 </div>
+{% block javascripts %}
+    {{ parent() }}
+    {{ encore_entry_script_tags('adminUsersEdit') }}
+{% endblock %}
 {% endblock content %}
