--- a/templates/bundles/TwigBundle/Exception/error.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error.html.twig
@@ -1,89 +1,35 @@
-<!DOCTYPE html>
-<html lang="fr">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="{% block meta_description %}Bienvenue sur l'application web du Football Club de Rosheim situé dans la commune du même nom dans le Bas-Rhin{% endblock %}">
-		
-		<title>
-			{% block title %}FC Rosheim
-			{% endblock %}
-		</title>
-		{% block stylesheets %}
-			<link rel="shortcut icon" href="/img/logo.ico" type="image">
-			{{ encore_entry_link_tags('app') }}
-		{% endblock %}
-	</head>
-	<body>
+{% extends 'base.html.twig' %}
 
-		{% block header %} 
-		<header class="d-flex flex-wrap justify-content-center py-3 mb-4">
-		                <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-		                    <svg class="bi me-2" width="40" height="32"><img src="/img/logo.png" height="42px" width="50.59" alt="logo FC Rosheim"/></svg>
-		                </a>
-		        
-		                <ul class="nav nav-pills">
-		                    <li class="nav-item"><a href="/" class="nav-link"><span class="leftbar">span border makes the cute little pipe to the left of the nav-items</span>Home</a></li>
-		<li class="nav-item"><a href="/news" class="nav-link"><span class="leftbar"></span>News</a></li>
-		                    <li class="nav-item"><a href="/team" class="nav-link"><span class="leftbar"></span>Équipes</a></li>
-		                    <li class="nav-item"><a href="#" class="nav-link"><span class="leftbar"></span>Résultats</a></li>
-		                    <li class="nav-item"><a href="#" class="nav-link"><span class="leftbar"></span>Prochainement</a></li> 
-		{# Si l'utilisateur a un rôle user (et est donc connecté) : #}
-		{# {% if is_granted('ROLE_USER') %} #}
-		{# <li class=" nav-item dropdown flex" id="log-logo">
-		                            <div class="nav-link">
-		                                <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16" alt="logo du profil de l'utilisateur">
-		                                    <title> Profil de l'utilisateur</title>
-		                                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-		                                    <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-		                                </svg>
-		                            </div> #}
-		{# Dropdown sur l'icône avec la possibilité de consulter son profil ou de se déconnecter #}
-		{# <div class="dropdown-content">
-		                                <a href="{{ path('profile', {'id': app.user.id}) }}" class="">Profil</a>
-		                                <a href="{{ path('app_logout', {'id': app.user.id}) }}" class="">Se déconnecter</a>
-		                            </div>
-		                        </li> #}
-		{# Sinon l'icône renvoie vers l'authentification #}
-		{# {% else %} 
-		                        <li class="nav-item" id="log-logo">
-		                            <a href="{{ path('app_login') }}" class="nav-link">
-		                                <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16" alt="logo du profil de l'utilisateur">
-		                                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-		                                    <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-		                                </svg>
-		                            </a>
-		                        </li>
-		                    {% endif %}
-		{# </ul>
-		        </header>
-		{# {% endblock %}
 
-		{# {% block content %}
-		
-					{% block title %}Page 404
-					{% endblock %}
-		
-					{% block content %} #}
-			<div class="container-fluid "> <div class="flex flex-column align-items-center justify-content-md-center full-height">
-				<h1>Page not found</h1>
+		{% block content %}
+<div class="container-fluid">
+    <div class="row justify-content-md-center full-height flex align-items-center">
+        <div class="col-md-4 justify-content-md-center card">
 
-				<p>
-					The requested page couldn't be located. Checkout for any URL misspelling or
-					<a href="{{ path('home') }}">return to the homepage</a>.
-				</p>
-				<p>Error code :
-					{{ status_code }}</p>
-				<p>Error message :
-					{{ status_text }}</p>
-				<p>Custom message :
-					{{ exception.message }}</p>
+
+
+			<div class="container-fluid ">
+				<div class="flex flex-column align-items-center justify-content-md-center full-height">
+					<h1 class="text-center">Tire manqué, c'est passé à <span>404</span> cm de la lucarne</h1>
+
+					<p class="text-center">
+						La requête n'a pas aboutie. Vérifiez l'URL ou
+						<a href="{{ path('home') }}">revenez à la page d'accueil</a>.
+					</p>
+					</p>
+					<p>Error code :
+						{{ status_code }}</p>
+					<p>Error message :
+						{{ status_text }}</p>
+					<p>Custom message :
+						{{ exception.message }}</p>
+				</div>
 			</div>
-		</div>
-		{# {% endblock %}
-		
-		
-				{% endblock %} #}
-	</body>
 
-</html>
+
+        </div>
+    </div>
+</div>
+
+		{% endblock %}
+
