CalendarSubscriber.php created, template included in event form

--- a/templates/event/new.html.twig
+++ b/templates/event/new.html.twig
@@ -7,5 +7,9 @@
 
     {{ include('event/_form.html.twig') }}
 
+    <a href="{{ path('event_new') }}">Create new event</a>
+
+    <div id="calendar-holder"></div>
+
     <a href="{{ path('event_index') }}">back to list</a>
 {% endblock %}
